--- a/HeHaven/index.html
+++ b/HeHaven/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-  <div id="topbar" class="d-flex align-items-center fixed-top">
+  <!-- <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">contact@HeHaven.com</a>
@@ -42,7 +42,7 @@
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
@@ -160,45 +160,38 @@
       </div>
     </section>
 
-    <section id="appointment" class="appointment section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Make an Appointment</h2>
+<section id="appointment" class="appointment section-bg">
+  <div class="container">
+    <div class="section-title">
+      <h2>Make an Appointment</h2>
           <p>Rest assured, we're here to support you and we believe that access to such services should be freely available. Share a bit about yourself, and we'll connect you with one of our volunteers who is ready to lend a listening ear. Feel free to open up about whatever has been weighing on your mind.</p>
-        </div>
+    </div>
 
-        <form action="forms/appointment.php" method="post" role="form" class="php-email-form">
-          <div class="row">
-            <div class="col-md-4 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4"
-                data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-            <div class="col-md-4 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                data-rule="email" data-msg="Please enter a valid email">
-              <div class="validate"></div>
-            </div>
-            <div class="col-md-4 form-group mt-3 mt-md-0">
-              <input type="tel" class="form-control" name="phone" id="phone" placeholder="Your Phone"
-                data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-          </div>
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message (Optional)"></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your appointment request has been sent successfully. Thank you!</div>
-          </div>
-          <div class="text-center"><button type="submit">Make an Appointment</button></div>
-        </form>
+    <form id="appointmentForm" role="form" class="php-email-form">
+      <div class="row">
+        <div class="col-md-4 form-group">
+          <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+        </div>
+        <div class="col-md-4 form-group mt-3 mt-md-0">
+          <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+        </div>
+        <div class="col-md-4 form-group mt-3 mt-md-0">
+          <input type="tel" class="form-control" name="phone" id="phone" placeholder="Your Phone" required>
+        </div>
       </div>
-    </section>
+      <div class="form-group mt-3">
+        <textarea class="form-control" name="message" rows="5" placeholder="Message (Optional)"></textarea>
+      </div>
+      <div class="mb-3">
+        <div class="loading" style="display: none;">Loading</div>
+        <div class="error-message" style="display: none;"></div>
+        <div class="sent-message" style="display: none;">Your appointment request has been sent successfully. Thank you!</div>
+      </div>
+      <div class="text-center"><button type="submit">Make an Appointment</button></div>
+    </form>
+  </div>
+</section>
+
     
     <section id="services" class="services">
       <div class="container">
@@ -733,6 +726,64 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <script src="main.js"></script>
+
+
+  <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore.js"></script>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyDqL04gma1_eybExI3RVz_eY3K5Yt1gfxU",
+    authDomain: "hehaven-78909.firebaseapp.com",
+    projectId: "hehaven-78909",
+    storageBucket: "hehaven-78909.firebasestorage.app",
+    messagingSenderId: "53938473551",
+    appId: "1:53938473551:web:9583caec2f87f0c90f383a",
+    measurementId: "G-XNYZ19ZRYZ"
+  };
+
+  const app = firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  const form = document.getElementById('appointmentForm');
+  const loading = document.querySelector('.loading');
+  const errorMessage = document.querySelector('.error-message');
+  const sentMessage = document.querySelector('.sent-message');
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    loading.style.display = 'block';
+    errorMessage.style.display = 'none';
+    sentMessage.style.display = 'none';
+
+    const name = form.name.value.trim();
+    const email = form.email.value.trim();
+    const phone = form.phone.value.trim();
+    const message = form.message.value.trim();
+
+    try {
+      await db.collection('appointments').add({
+        name,
+        email,
+        phone,
+        message,
+        submittedAt: new Date()
+      });
+
+      loading.style.display = 'none';
+      sentMessage.style.display = 'block';
+      form.reset();
+    } catch (err) {
+      console.error('Firebase error:', err);
+      loading.style.display = 'none';
+      errorMessage.textContent = 'An error occurred. Please try again.';
+      errorMessage.style.display = 'block';
+    }
+  });
+</script>
+
 
 </body>
 
