--- a/HeHaven/index.html
+++ b/HeHaven/index.html
@@ -501,7 +501,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/meganfox.jpg" class="testimonial-img" alt="">
+                  <img src="assets/user.webp" class="testimonial-img" alt="">
                   <h3>Anonymous User</h3>
                   <h4>Ceo &amp; Founder</h4>
                   <p>
@@ -516,7 +516,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/meganfox.jpg" class="testimonial-img" alt="">
+                  <img src="assets/user.webp" class="testimonial-img" alt="">
                   <h3>Anonymous User</h3>
                   <h4>Designer</h4>
                   <p>
@@ -531,7 +531,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/meganfox.jpg" class="testimonial-img" alt="">
+                  <img src="assets/user.webp" class="testimonial-img" alt="">
                   <h3>Anonymous User</h3>
                   <h4>Store Owner</h4>
                   <p>
@@ -546,7 +546,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/meganfox.jpg" class="testimonial-img" alt="">
+                  <img src="assets/user.webp" class="testimonial-img" alt="">
                   <h3>Anonymous User</h3>
                   <h4>Freelancer</h4>
                   <p>
@@ -561,7 +561,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/meganfox.jpg" class="testimonial-img" alt="">
+                  <img src="assets/user.webp" class="testimonial-img" alt="">
                   <h3>Anonymous User</h3>
                   <h4>Entrepreneur</h4>
                   <p>
@@ -637,11 +637,11 @@
         </div>
       </div>
 
-      <div>
+      <!-- <div>
         <iframe style="border:0; width: 100%; height: 350px;"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5190.924291390076!2d76.84764116441497!3d23.07740197633518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397ce9ceaaaaaaab%3A0xa224b6b82b421f83!2sVIT%20Bhopal%20University!5e0!3m2!1sen!2sin!4v1703955301281!5m2!1sen!2sin"
           frameborder="0" allowfullscreen></iframe>
-      </div>
+      </div> -->
 
     </section>
   </main>
